syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

package transaction;

option go_package = "/pb;proto";

service TransactionService {
  rpc listTransactions (TransactionEmpty) returns (TransactionListResponse);
  rpc CreateTransaction (TransactionRequest) returns (TransactionIdResponse);
  rpc ListTransactionsAmount (Document) returns (TransactionAmountListResponse);
  rpc ListTransactionsByAccountId (common.AccountId) returns (TransactionJoinAccountListResponse);
  rpc ListTransactionsByDocument (Document) returns (TransactionJoinAccountListResponse);
}

message TransactionEmpty {}

message Document{
  string document = 1;
}

message TransactionRequest {
  int64 account_id = 1;
  int32 transaction_type_id = 2;
  double amount = 3;
}

message TransactionIdResponse {
  int64 transaction_id = 1;
}

message TransactionResponse {
  int64 transaction_id = 1;
  int64 account_id = 2;
  int32 transaction_type_id = 3;
  double amount = 4;
  google.protobuf.Timestamp transaction_date = 5;
}

message TransactionListResponse {
  repeated TransactionResponse transactions = 1;
}

message TransactionJoinAccountResponse {
  int64 transaction_id = 1;
  string name = 2;
  string document = 3;
  string description = 4;
  double amount = 5;
  google.protobuf.Timestamp transaction_date = 6;
}

message TransactionAmountResponse {
  string name = 1;
  string document = 2;
  double amount = 3;
}

message TransactionAmountListResponse {
  repeated TransactionAmountResponse transactionsAmount = 1;
}

message TransactionJoinAccountListResponse {
  repeated TransactionJoinAccountResponse transactionsByAccount = 1;
}